# share

./: .gitignore  .gitmodules  README.md  tags
jff/acwj-fun/cc/: README.md
jff/acwj-fun/ch02/: helper.h
jff/acwj-fun/ch04/: Makefile
jff/acwj-fun/ch05/: codegen.h
jff/acwj-fun/ch1/: Makefile  README.md  c  helper.h  main.c
jff/acwj-fun/ch2/: Makefile  ast.h  helper.h  main.c
jff/acwj-fun/ch3/: Makefile  main.c  prio.h  scan.h
jff/acwj-fun/ch4/: Makefile  codegen.h  helper.h  main.c
jff/acwj-fun/ch5/: README.md  ast.h  codegen.h  prio.h
jff/algo/: README.md
jff/algo/cpp/search/: Dfs.cpp  EightQueen.cpp
jff/algo/go/search/: .Dfs.go.swp  Dfs.go
jff/cuda/ch1/: Hello.cu  Pitch.cu  a.out  acc_matrix.cu
jff/cuda/cuda_documentation/: CMakeLists.txt
jff/cuda/cuda_documentation/ch1/: CMakeLists.txt  acc_matrix.cu  hello.cu  pitch.cu
jff/cuda/cuda_handbook/: CMakeLists.txt
jff/cuda/cuda_handbook/ch3/: 3.1.cu  CMakeLists.txt
jff/cuda/cuda_handbook/ch5/: CMakeLists.txt
jff/cuda/cuda_handbook/playground/: CMakeLists.txt  hello.cu
jff/cuda/handbook/ch1/: acc_matrix.cu  hello.cu  utils.h
jff/lest/samples/: lest-unittest01.cc
jff/playground/: cnn.cc  libhelper.h  matmul.c
jff/playground/cnn/: CMakeLists.txt  cnn.cc
jff/playground/compute/: common.cuh
jff/playground/compute/cuda/plot_sgemm/: CMakeLists.txt  README.md  common.cuh  runner.cu
jff/playground/compute/cuda/plot_sgemm/kernel/: sgemm_1d_tiling.cuh  sgemm_2d_tiling.cuh  sgemm_global_memory_coalescing.cuh  sgemm_naive.cuh  sgemm_share_memory_caching.cuh
jff/playground/compute/hip/: 1_naive.cu  CMakeLists.txt  add.cu  rocblas_sample.cu  sgemm_skeleton.cc
jff/playground/compute/opencl/: CMakeLists.txt
jff/playground/compute/openmp/: CMakeLists.txt
jff/playground/cpp-template/: CMakeLists.txt  common.hh
jff/playground/cpp-template/playground/: CMakeLists.txt  fact.cc
jff/playground/cuda/matmul/: CMakeLists.txt  benchmark.cu  common.cuh  cublas.cu  matmul.cu
jff/playground/cuda/skeleton/: CMakeLists.txt  skeleton.cu
jff/playground/fun/: benchmark_memmem_streq.c  fun.ipynb  percision.c  struct_to_xml.cc  xml.cc
jff/playground/hdl/chipverify/: jk.v
jff/playground/hdl/sv/: example1.sv  site
jff/playground/math/: CMakeLists.txt  fft.cc
jff/playground/opencl/: CMakeLists.txt  common.h  vec_mul.cpp
jff/playground/opencl/SGEMM/: CMakeLists.txt  mat_mul_cl_v1.cpp  mat_mul_no_opt.cpp  sgemm.cl  v1.cl
jff/playground/opencl/book/: CMakeLists.txt  add.cc  add.cl  matmul.cl  saxpy.cc
jff/playground/opencl/img/: img.cc
jff/playground/opencl/skeleton/: CMakeLists.txt  skeleton.cc
jff/playground/png/: cnn.cc
jff/playground/stl/: CMakeLists.txt  smart_ptr.cc  stl_ptr.cc
jff/playground/zfs/: Readme.md  read.cc  zfs.h
jff/protocol/torrent/: README.md
jff/torch/: backprop.ipynb  quick-start.ipynb  tutorial.ipynb
md/: host-pkg-mirror.md  irc-further.md  irc.md  mail-service-hosting.md  neomutt.md  self-host-mailserver.md  tricks.md  u-boot.md
notebook/: playground.ipynb  sha3.ipynb
notebook/cs231n/a1/: knn.ipynb  svm.ipynb
notebook/cs231n/a2/: PyTorch.ipynb
notebook/cs231n/l2/: knn.ipynb  linear.ipynb
notebook/cs231n/playground/: main.ipynb
notebook/kaggle/solution/: equity-post-HCT-survival-predictions.ipynb  llms-you-cant-please-them-all.ipynb  titanic.ipynb
notebook/playground/: compress.ipynb
(+142 files in other folders)
